--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,11 @@
-//
+// Fonts
+//@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
 @import '~@mdi/font/css/materialdesignicons.min.css';
 @import '~@mdi/font/css/materialdesignicons.css'; // Ensure you are using css-loader
-
-
-//@import '~material-design-icons-iconfont/dist/material-design-icons.css';
